--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "less": "2.7.3"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
     "axios": "^0.17.1",
+    "bootstrap": "^4.0.0",
+    "jquery": "^3.3.1",
     "vue": "^2.5.13"
   }
 }
